--- a/WebGUI/html/SlowControlsDashboardFileTree.html
+++ b/WebGUI/html/SlowControlsDashboardFileTree.html
@@ -46,13 +46,19 @@
 		#fileBlock {
 			background-color: 			rgb(26,148,49);
 		}				
-
+		
+		#saveButton {
+			width:						160px;
+		}
+		
 		#mainBlock {
 			background-color: 			rgb(240,234,214);
 		}
 
 		#fileTreeDiv {
 			height: 					auto;
+			overflow:					auto;
+			width:						180px;
 		}
 
 		.mainBlock {
@@ -70,18 +76,20 @@
 
 		/* CSS Tree menu styles */
 		ol.tree {
-			padding: 					0 0 0 30px;
+			padding: 					0;
 			width: 						inherit;
 		}
 
 		li { 
 			position: 					relative; 
-			margin-left: 				-15px;
+			margin-left: 				-17px;
 			list-style: 				none;
+			border-left:				1px solid gray;
 		}
 
 		li.file {
-			margin-left: 				-1px !important;
+			margin-left: 				-13px !important;
+			padding-left:				10px;
 		}
 		li.file a {
 			background: 				url(/WebPath/images/windowContentImages/SlowControlsDashboardFileTree-document.png) 0 0 no-repeat;
@@ -135,10 +143,10 @@
 		}
 		li input:checked + ol > li { 
 			display: 					block; 
-			margin: 					0 0 0.125em;  /* 2px */
+			/* margin: 					0 0 0.125em;  2px */
 		}
 		li input:checked + ol > li:last-child {
-			margin: 0 0 0.063em; /* 1px */ 
+			/*margin: 0 0 0.063em;  1px */ 
 		}
 
 		</style>
@@ -200,7 +208,8 @@
 					title.id = "title";
 					title.innerHTML = window.parent.pagesList_;
 					document.getElementById("header").appendChild(title);
-					while(title = document.getElementById("title").width < document.getElementById("header").width)
+					while(title = document.getElementById("title").width <
+						document.getElementById("header").width)
 					{
 						size = parseInt(title.css("font-size"), 10);
 						loading.css("font-size", size + 1);
@@ -222,36 +231,44 @@
 					}
 
 					document.getElementById("pagesFolder-ol").innerHTML = "";
-					window.parent.pagesList_.forEach(function(page){
-						if(page != "undefined"){dir(document.getElementById("pagesFolder-ol"), page, page)} //FIXME, if pass undefined as filename -> throws error
-					});
+					window.parent.pagesList_.forEach(
+						function(page)
+						{
+							if(page != "undefined")
+							{
+								dir(document.getElementById(
+									"pagesFolder-ol"),
+									page, 
+									page);
+							} //FIXME, if pass undefined as filename -> throws error
+						});
 
-					var saveButton = document.createElement("button");
-					var saveAsButton = document.createElement("button");
-					var closeButton = document.createElement("button");
+					var saveButton = document.getElementById("saveButton");
+					//var saveAsButton = document.createElement("button");
+					//var closeButton = document.createElement("button");
 
 					saveButton.type = "text";
-					saveAsButton.type = "text";
-					closeButton.type = "text";
+					//saveAsButton.type = "text";
+					//closeButton.type = "text";
 
-					saveButton.innerHTML = "Save";
-					saveAsButton.innerHTML = "Save As";
-					closeButton.innerHTML = "Close";
+					//saveButton.innerHTML = "Save";
+					//saveAsButton.innerHTML = "Save As";
+					//closeButton.innerHTML = "Close";
 
-					closeButton.onclick = function(){close();};
+					//closeButton.onclick = function(){close();};
 					saveButton.onclick = function(){save();};
-					saveAsButton.onclick = function(){saveAs();};
+					//saveAsButton.onclick = function(){saveAs();};
 
-					document.getElementById("saveli").innerHTML = "";
-					document.getElementById("saveli").appendChild(saveButton);
-					document.getElementById("saveli").appendChild(closeButton);
+					//document.getElementById("saveli").innerHTML = "";
+					//document.getElementById("saveli").appendChild(saveButton);
+					//document.getElementById("saveli").appendChild(closeButton);
 
 					var fileTreeDiv = document.getElementById("fileTreeDiv");
 					var header = document.getElementById("header");
 
 					header.style.height      = window.innerHeight * 0.05 + "px";
-					fileTreeDiv.style.height = window.innerHeight * 0.75 + "px";
-					controlsDiv.style.height = window.innerHeight * 0.10 + "px";
+					fileTreeDiv.style.height = window.innerHeight * 0.85 + "px";
+					controlsDiv.style.height = window.innerHeight * 0.0 + "px";
 					controlsDiv.style.top = fileTreeDiv.style.top + fileTreeDiv.style.height;
 				}
 			} //end redrawWindow()
@@ -399,6 +416,7 @@
 	<body onload='Javascript:initFileTree();'>	
 
 		<div class='mainBlock' id='header' ></div>
+		<button id='saveButton'>Save As...</button>
 		<div class='mainBlock' id='fileTreeDiv' width="100%">
 	    <ol class="tree">
 	      <li>
@@ -410,9 +428,9 @@
 	    </ol>
 		</div>
 		<div id="controlsDiv" >
-			<ul id="saveul">
+			<!--ul id="saveul">
 			<li id="saveli"></li>
-			</ul>
+			</ul-->
 		</div>
 
 	</body>
