--- a/WebGUI/html/widgets/led.html
+++ b/WebGUI/html/widgets/led.html
@@ -55,7 +55,7 @@
 				var display = document.getElementById("display");
 				display.innerHTML = "";
 				if (!Object.getOwnPropertyNames(widget.pvList).length)
-					display.innerHTML = "LED <br/> ADD PVs TO WIDGET";
+					display.innerHTML = "<center>LED <br/> No associated PVs to display.</center>";
 
 				var div = document.createElement('div');
 				div.className = "wrapper";
@@ -159,7 +159,6 @@
 
 	<body onload='Javascript:init();'>
 		<div id="display" width="100%" height="100%">
-			<center>LED <br/> ADD PVs TO WIDGET</center>
 		</div>
 	</body>
 
