Persistency of configuration still not working but almost there...

--- a/WebGUI/html/Visualization-complexLayout.html
+++ b/WebGUI/html/Visualization-complexLayout.html
@@ -28,6 +28,7 @@
 
  <body>
   <div id="sourcesDiv"                    ></div>
+  <div id="perWinDiv"                     ></div>
   <div id="east"    class="x-hide-display"></div>
   <div id="west"    class="x-hide-display"></div>
   <div id="center"  class="x-hide-display"></div>
