--- a/onlineDoc/inject_otsdaq.html
+++ b/onlineDoc/inject_otsdaq.html
@@ -18,6 +18,7 @@ Below are some helpful links to <i>otsdaq</i> C++ classes organized by topic. Th
 <div style='margin-left:40px'>
 <li><a href='#supervisor'>Supervisor Base Classes</a>
 <li><a href='#coreSupervisors'><i>otsdaq</i> Core Supervisors</a>
+<li><a target='_blank' href='https://otsdaq.fnal.gov/tutorials/first_demo/topics/configuration_primer.html'>Configuration Primer</a>
 <li><a href='#access'>Web Desktop Login and Requests</a>
 <li><a href='#frontends'>Front-ends</a>
 <li><a href='#dataManagers'>Data Managers</a>
@@ -33,10 +34,10 @@ The intention is for users to clone otsdaq_demo into one or many of their own re
 Here are the links to the source code documentation for each respository:
 <br><br>
 <div style='margin-left:40px'>
-<li><a target='_blank' href='https://otsdaq.fnal.gov/docs/code/otsdaq/'>otsdaq</a>
-<li><a target='_blank' href='https://otsdaq.fnal.gov/docs/code/otsdaq_utilities/'>otsdaq_utilities</a> 
-<li><a target='_blank' href='https://otsdaq.fnal.gov/docs/code/otsdaq_components/'>otsdaq_components</a>
-<li><a target='_blank' href='https://otsdaq.fnal.gov/docs/code/otsdaq_demo/'>otsdaq_demo</a>
+<li><a href='https://otsdaq.fnal.gov/docs/code/otsdaq/'>otsdaq</a>
+<li><a href='https://otsdaq.fnal.gov/docs/code/otsdaq_utilities/'>otsdaq_utilities</a> 
+<li><a href='https://otsdaq.fnal.gov/docs/code/otsdaq_components/'>otsdaq_components</a>
+<li><a href='https://otsdaq.fnal.gov/docs/code/otsdaq_demo/'>otsdaq_demo</a>
 </div>
 
 <br>
@@ -606,12 +607,11 @@ retrieving channel values.
 </td></tr>
 <!-- :::::::::::: -->
 <tr><td>
-<a href='https://otsdaq.fnal.gov/docs/code/otsdaq_components/class_ots_slow_controls_interface.html'>
-OtsSlowControlsInterface
+<a target='_blank' href='https://otsdaq.fnal.gov/docs/code/otsdaq_epics/classots_1_1_epics_interface.html'>
+EpicsInterface
 </a>
-</td><td>This class is an example slow controls interface plugin inheriting functionality from 
-the SlowControlsVInterface. It implements a custom ots slow controls protocol for saving and 
-retrieving channel values.
+</td><td>This class is the EPICS slow controls interface plugin inheriting functionality from 
+the SlowControlsVInterface. It implements a the EPICS channel access protocol for handling PVs.
 </td></tr>
 
 </table>
