--- a/onlineDoc/inject_otsdaq_demo.html
+++ b/onlineDoc/inject_otsdaq_demo.html
@@ -16,10 +16,10 @@ The intention is for users to clone otsdaq_demo into one or many of their own re
 Here are the links to the source code documentation for each respository:
 <br><br>
 <div style='margin-left:40px'>
-<li><a target='_blank' href='http://otsdaq.fnal.gov/docs/code/otsdaq/'>otsdaq</a>
-<li><a target='_blank' href='http://otsdaq.fnal.gov/docs/code/otsdaq_utilities/'>otsdaq_utilities</a> 
-<li><a target='_blank' href='http://otsdaq.fnal.gov/docs/code/otsdaq_components/'>otsdaq_components</a>
-<li><a target='_blank' href='http://otsdaq.fnal.gov/docs/code/otsdaq_demo/'>otsdaq_demo</a>
+<li><a href='https://otsdaq.fnal.gov/docs/code/otsdaq/'>otsdaq</a> - with additional high-level topics and helpful links
+<li><a href='https://otsdaq.fnal.gov/docs/code/otsdaq_utilities/'>otsdaq_utilities</a> 
+<li><a href='https://otsdaq.fnal.gov/docs/code/otsdaq_components/'>otsdaq_components</a>
+<li><a href='https://otsdaq.fnal.gov/docs/code/otsdaq_demo/'>otsdaq_demo</a>
 </div>
 
 <br>
