Removing trim call in case undefined

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -715,25 +715,25 @@
 
 					//extract last config groups
 					_lastTableGroups = [
-						DesktopContent.getXMLValue(req, "LastConfiguredGroupName").trim(),
-						DesktopContent.getXMLValue(req, "LastConfiguredGroupKey").trim(),
-						DesktopContent.getXMLValue(req, "LastConfiguredGroupTime").trim(),
-						DesktopContent.getXMLValue(req, "LastStartedGroupName").trim(),
-						DesktopContent.getXMLValue(req, "LastStartedGroupKey").trim(),
-						DesktopContent.getXMLValue(req, "LastStartedGroupTime").trim(),
+						DesktopContent.getXMLValue(req, "LastConfiguredGroupName"),
+						DesktopContent.getXMLValue(req, "LastConfiguredGroupKey"),
+						DesktopContent.getXMLValue(req, "LastConfiguredGroupTime"),
+						DesktopContent.getXMLValue(req, "LastStartedGroupName"),
+						DesktopContent.getXMLValue(req, "LastStartedGroupKey"),
+						DesktopContent.getXMLValue(req, "LastStartedGroupTime"),
 						
-						DesktopContent.getXMLValue(req, "LastActivatedConfigGroupName").trim(),
-						DesktopContent.getXMLValue(req, "LastActivatedConfigGroupKey").trim(),
-						DesktopContent.getXMLValue(req, "LastActivatedConfigGroupTime").trim(),
-						DesktopContent.getXMLValue(req, "LastActivatedIteratorGroupName").trim(),
-						DesktopContent.getXMLValue(req, "LastActivatedIteratorGroupKey").trim(),
-						DesktopContent.getXMLValue(req, "LastActivatedIteratorGroupTime").trim(),
-						DesktopContent.getXMLValue(req, "LastActivatedBackboneGroupName").trim(),
-						DesktopContent.getXMLValue(req, "LastActivatedBackboneGroupKey").trim(),
-						DesktopContent.getXMLValue(req, "LastActivatedBackboneGroupTime").trim(),
-						DesktopContent.getXMLValue(req, "LastActivatedContextGroupName").trim(),
-						DesktopContent.getXMLValue(req, "LastActivatedContextGroupKey").trim(),
-						DesktopContent.getXMLValue(req, "LastActivatedContextGroupTime").trim()
+						DesktopContent.getXMLValue(req, "LastActivatedConfigGroupName"),
+						DesktopContent.getXMLValue(req, "LastActivatedConfigGroupKey"),
+						DesktopContent.getXMLValue(req, "LastActivatedConfigGroupTime"),
+						DesktopContent.getXMLValue(req, "LastActivatedIteratorGroupName"),
+						DesktopContent.getXMLValue(req, "LastActivatedIteratorGroupKey"),
+						DesktopContent.getXMLValue(req, "LastActivatedIteratorGroupTime"),
+						DesktopContent.getXMLValue(req, "LastActivatedBackboneGroupName"),
+						DesktopContent.getXMLValue(req, "LastActivatedBackboneGroupKey"),
+						DesktopContent.getXMLValue(req, "LastActivatedBackboneGroupTime"),
+						DesktopContent.getXMLValue(req, "LastActivatedContextGroupName"),
+						DesktopContent.getXMLValue(req, "LastActivatedContextGroupKey"),
+						DesktopContent.getXMLValue(req, "LastActivatedContextGroupTime")
 						
 					];
 					//console.log(_lastTableGroups);
