--- a/WebGUI/html/widgets/gauge_widget.html
+++ b/WebGUI/html/widgets/gauge_widget.html
@@ -32,7 +32,7 @@ HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 
 			var gauges = [];
 			var pv_settings_ = [];
-			var parameters_ = {class: "", "show_labels": "true"};
+			var parameters_ = {class: "", "show_labels": "true", "old_value_foreground_color": "grey", "old_value_background_color": "lightgrey"};
 
 			/////////////////////////////////////////////////////////////////////////////////////////
 			/////////////////////////////////////////////////////////////////////////////////////////
@@ -76,7 +76,7 @@ HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 					divtemp.style.fontSize = "auto";
 					if (parameters_["show_labels"] == "true")
 					{
-						divtemp.innerHTML = "<center id='p-" + pv + "'>" + pv.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br />WAITING FOR A NEW PV VALUE...</center>";
+						divtemp.innerHTML = "<left id='p-" + pv + "'>" + pv.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br />WAITING FOR A NEW PV VALUE...</left>";
 						var max_size = Math.max(window.innerHeight - 50, window.innerWidth - 50) / Object.keys(widget.pvList).length;
 					}
 					else
@@ -87,6 +87,7 @@ HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 					divtemp.id = "gauge-div-" + pv_number;
 					divtemp.style.width = "100%";
 					divtemp.style.height = "100%";
+					
 					div.appendChild(divtemp);
 
 					var label = pv_settings_[pv] !== undefined ? pv_settings_[pv].Units : "";
@@ -120,33 +121,33 @@ HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 			{
 				console.log("Gauge newValue() reached", pvName, pvValue);
 				var pv = "p-" + pvName;
-				var now = Math.floor(Date.now())/1000;
-				var time2compare = pvTime*1. + 240.;
+				var actualTime = Math.floor(Date.now())/1000;
+
 				if (parameters_["show_labels"] == "true")
 				{
 					if(pvSeverity == "MAJOR" )
-						document.getElementById(pv).innerHTML = "<center style = 'color: red'>" + pvName.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
+						document.getElementById(pv).innerHTML = "<left style = 'color: red'>" + pvName.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</left>";
 					else if(pvSeverity == "MINOR")
-						document.getElementById(pv).innerHTML = "<center style = 'color: orange'>" + pvName.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
+						document.getElementById(pv).innerHTML = "<left style = 'color: orange'>" + pvName.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</left>";
 					else
-						if ((pvTime !== undefined) && (time2compare > now))
-							document.getElementById(pv).innerHTML = "<center style = 'color: green'>" + pvName.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
+						if (window.parent.checkPVTime(window.frameElement.id, pvName, pvTime))
+							document.getElementById(pv).innerHTML = "<left style = 'color: green'>" + pvName.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</left>";
 						else
-							document.getElementById(pv).innerHTML = "<center style = 'color: grey'>"
+							document.getElementById(pv).innerHTML = "<left style = 'color: " + parameters_["old_value_foreground_color"] + "'>"
 															+ pvName.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />")
 															//+ "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity
-															+ "<br>NOT UPDATED FOR MORE THAN " + parseInt((now - pvTime*1.)/60) + " MINUTES</center>";
+															+ "<br>NOT UPDATED FOR MORE THAN " + parseInt((actualTime - pvTime*1.)/60) + " MINUTES</left>";
 				}
 
 				gauges[pvName].redraw(pvValue);
 				gauges[pvName].body[0][0].parentElement.title = window.parent.setWidgetToolTip(pvName, pvValue, pvTime, pv_settings_);
 
-				console.log("thermometer date now: " + now + " pvtime: " + pvTime + " refresh rate: 10 sec");
+				console.log("thermometer date now: " + actualTime + " pvtime: " + pvTime + " refresh rate: 10 sec");
 				if (gauges[pvName].body[0][0].parentElement !== null)
-					if ((pvTime !== undefined) && (time2compare > now))
+					if (window.parent.checkPVTime(window.frameElement.id, pvName, pvTime))
 						gauges[pvName].body[0][0].parentElement.style.backgroundColor = 'white';
 					else
-						gauges[pvName].body[0][0].parentElement.style.backgroundColor = 'lightgrey';
+						gauges[pvName].body[0][0].parentElement.style.backgroundColor = parameters_["old_value_background_color"];
 				else
 					console.log("setWidgetPVinfo(): Error widgetElement = null");
 			}
