--- a/WebGUI/html/widgets/widget_text.html
+++ b/WebGUI/html/widgets/widget_text.html
@@ -93,7 +93,7 @@
 				var display = document.getElementById("display");
 				display.innerHTML = "";
 				if (!Object.getOwnPropertyNames(widget.pvList).length)
-					display.innerHTML = "TEXT: ADD PVs TO WIDGET";
+					display.innerHTML = "<center>TEXT: No associated PVs to display.</center>";
 
 				display.appendChild(table);
 
@@ -191,7 +191,6 @@
 	<body onload='Javascript:init();'>
 
 	<div class="wrapper" id="display" width="100%" height="100%">
-		<center>TEXT: ADD PVs TO WIDGET</center>
 	</div>
 
 	</body>
