--- a/WebGUI/html/widgets/led.html
+++ b/WebGUI/html/widgets/led.html
@@ -134,10 +134,6 @@
 			function drawNewValue(pvName, pvValue, pvTime, pvStatus, pvSeverity)
 			{
 				console.log("LED newValue() reached", pvName, pvValue);
-				//var canvas = document.getElementById('led-' + pvName);
-				var canvas = leds[pvName];
-				canvas.title =  window.parent.setWidgetToolTip(pvName, pvValue, pvTime, pv_settings_);
-				var actualTime = Math.floor(Date.now())/1000;
 
 				window.parent.setWidgetPVinfo(
 									  window.frameElement.id
@@ -153,6 +149,9 @@
 									);
 
 				drawLed(labelContainers[pvName], pvName, pvValue, pvTime, pvSeverity);
+				leds[pvName].title =  window.parent.setWidgetToolTip(pvName, pvValue, pvTime, pv_settings_);
+				if (parameters_["show_labels"] == "true")
+					labelContainers[pvName].title =  window.parent.setWidgetToolTip(pvName, pvValue, pvTime, pv_settings_);
 			}
 
 			window.onresize = function() {
