--- a/WebGUI/html/widgets/widget_text.html
+++ b/WebGUI/html/widgets/widget_text.html
@@ -15,7 +15,7 @@
 			  grid-auto-rows: minmax(100px, auto);
 			}
 			a{
-				color: green;
+				color: blue;
 				height: auto;
 		    	text-align: center;
 				fontSize : 12vw;
@@ -36,10 +36,12 @@
 		<script>		
 
 			//functions:
-				//init()
+			//init()
 
 			var pv_settings_ = [];
-			var parameters_ = {class: "", "show_labels": "false"};
+			var labelContainers = [];
+			var values = [];
+			var parameters_ = {class: "", "show_labels": "true", "old_value_foreground_color": "grey", "old_value_background_color": "lightgrey"};
 
 			/////////////////////////////////////////////////////////////////////////////////////////
 			/////////////////////////////////////////////////////////////////////////////////////////
@@ -78,13 +80,10 @@
 				{
 					var tr = document.createElement('tr');
 					tr.id = "tr" + col;
-					//tr.style.width = tr.parentElement.innerWidth / columns;
 					for(var cell = 1; cell <= rows; cell++)
 					{
 						var td = document.createElement('td');
 						td.id = "td" + col + "-" + cell;
-						//td.style.height = td.parentElement.innerHeight / rows;
-						//console.log(td.id);
 						tr.appendChild(td);
 					}
 					table.appendChild(tr);
@@ -101,19 +100,38 @@
 				console.log("counter" + counter);
 				for(var pv in widget.pvList)
 				{
-					var a = document.createElement('a');
-					a.id = pv;
-					a.title = pv;
-					a.innerHTML = "N/A";
-					a.style.width = "100%";
-					a.style.height = "100%";
+					var label = document.createElement('p');
+
+					if (parameters_["show_labels"] == "true")
+						label.innerHTML = pv.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br />WAITING FOR A NEW PV VALUE...";
+					else
+						label.innerHTML = "";
+
+					var labelCenter = document.createElement("center");
+					labelCenter.appendChild(label);
+					labelContainers[pv] = label;
+
+					var value = document.createElement('a');
+					value.id = pv;
+					value.title = pv;
+					value.innerHTML = "N/A";
+					value.style.width = "100%";
+					value.style.height = "100%";
+					values[pv] = value;
+
+					var unit = document.createElement('a');
+					unit.innerHTML = " " + pv_settings_[pv].Units;
 
 					var center = document.createElement("center");
-					center.appendChild(a);
+					center.appendChild(value);
+					center.appendChild(unit);
+
 					console.log(document.body);
+
 					var first = Math.floor(counter/columns);
 					if(first < 1) {first = 1;}				
 					console.log("td" + first + "-" + (counter%rows +1));
+					document.getElementById("td" + first + "-" + (counter%rows +1)).appendChild(labelCenter);
 					document.getElementById("td" + first + "-" + (counter%rows +1)).appendChild(center);
 					counter++;
 				}
@@ -136,55 +154,71 @@
 				console.log("Text newValue() reached", pvName, pvValue);
 
 				document.getElementById(pvName).innerHTML = (pvValue);
-				document.getElementById(pvName).parentElement.style.border = pvName + ":" + pvTime;
 				document.getElementById(pvName).parentElement.style["background-color"] = "transparent";
-				if(pvSeverity == "NO_ALARM")
-				{
-					document.getElementById(pvName).parentElement.style.color = "green"
-				}
-				else if(pvSeverity == "MINOR")
-				{
-					document.getElementById(pvName).parentElement.style.color = "yellow"
-				}else if(pvSeverity == "MAJOR")
-				{
-					document.getElementById(pvName).parentElement.style.color = "red"
-				}else if(pvSeverity == "INVALID")
-				{
-					document.getElementById(pvName).parentElement.style.color = "DimGray";
-				}
-				else if(pvSeverity == "DC")
-				{
-					document.getElementById(pvName).parentElement.style.color = "Light Grey";
-				}
 
-				if(pvStatus == "NO_ALARM")
-				{
-					document.getElementById(pvName).parentElement.style.border = "thin dotted green";
-				}
-				else if(pvStatus == "HIHI")
-				{
-					document.getElementById(pvName).parentElement.style.border = "thick solid red"
-				}else if(pvStatus == "LOLO")
-				{
-					document.getElementById(pvName).parentElement.style.border = "thick solid MediumSlateBlue";
-				}else if(pvStatus == "HIGH")
-				{
-					document.getElementById(pvName).parentElement.style.border = "thin dotted red";
-				}else if(pvStatus == "LOW")
-				{
-					document.getElementById(pvName).parentElement.style.border = "thin dotted blue";
-				}else if(pvStatus == "DC")
-				{
-					document.getElementById(pvName).parentElement.style["background-color"] = "Gainsboro";
-				}else if(pvStatus == "UDF")
-				{
-					document.getElementById(pvName).parentElement.style["background-color"] = "yellow";
-				}
+				window.parent.setWidgetPVinfo(
+									  window.frameElement.id
+									, pvName
+									, pvValue
+									, pvTime
+									, pvStatus
+									, pvSeverity
+									, parameters_["show_labels"]
+									, labelContainers
+									, parameters_["old_value_foreground_color"]
+									, parameters_["old_value_background_color"]
+									, values[pvName].parentElement.parentElement
+									);
 
 				document.getElementById(pvName).title =  window.parent.setWidgetToolTip(pvName, pvValue, pvTime, pv_settings_);
+				if (parameters_["show_labels"] == "true")
+					labelContainers[pvName].title =  window.parent.setWidgetToolTip(pvName, pvValue, pvTime, pv_settings_);
+
+//				if(pvSeverity == "NO_ALARM")
+//				{
+//					document.getElementById(pvName).parentElement.style.color = "green"
+//				}
+//				else if(pvSeverity == "MINOR")
+//				{
+//					document.getElementById(pvName).parentElement.style.color = "yellow"
+//				}else if(pvSeverity == "MAJOR")
+//				{
+//					document.getElementById(pvName).parentElement.style.color = "red"
+//				}else if(pvSeverity == "INVALID")
+//				{
+//					document.getElementById(pvName).parentElement.style.color = "DimGray";
+//				}
+//				else if(pvSeverity == "DC")
+//				{
+//					document.getElementById(pvName).parentElement.style.color = "Light Grey";
+//				}
+//
+//				if(pvStatus == "NO_ALARM")
+//				{
+//					document.getElementById(pvName).parentElement.style.border = "thin dotted green";
+//				}
+//				else if(pvStatus == "HIHI")
+//				{
+//					document.getElementById(pvName).parentElement.style.border = "thick solid red"
+//				}else if(pvStatus == "LOLO")
+//				{
+//					document.getElementById(pvName).parentElement.style.border = "thick solid MediumSlateBlue";
+//				}else if(pvStatus == "HIGH")
+//				{
+//					document.getElementById(pvName).parentElement.style.border = "thin dotted red";
+//				}else if(pvStatus == "LOW")
+//				{
+//					document.getElementById(pvName).parentElement.style.border = "thin dotted blue";
+//				}else if(pvStatus == "DC")
+//				{
+//					document.getElementById(pvName).parentElement.style["background-color"] = "Gainsboro";
+//				}else if(pvStatus == "UDF")
+//				{
+//					document.getElementById(pvName).parentElement.style["background-color"] = "yellow";
+//				}
 			}
 
-		</script>
+	</script>
 
 	</head>
 
